<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/userNameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameExample"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/attendedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendedExample"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendInfoExample"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <ListView
        android:id="@+id/dayAttended"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>