<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/activity_background"
    tools:context="com.example.mrrobot.ssaattendance.Activity.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcomeMessage"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/scanQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="20dp"
        android:textSize="24sp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/qrScanner"/>

    <Button
        android:id="@+id/checkAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="20dp"
        android:textSize="24sp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/checkAttendance"/>

    <Button
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="20dp"
        android:textSize="24sp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/other"/>
</LinearLayout>
